# rtmp

app/: .gitignore  build.gradle
app/src/androidTest/java/com/dntutty/rtmp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/dntutty/rtmp/: CameraHelper.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/dntutty/rtmp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
